Ajustes arquivos swagger
